[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/UI/Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/tiles/maintileset.tres" type="TileSet" id=2]
[ext_resource path="res://NEAT_usability/fonts/dynamics/roboto-regular.tres" type="DynamicFont" id=3]

[node name="Network_setup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -109.672
margin_top = -45.6633
margin_right = -109.672
margin_bottom = -45.6633
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_left = 524.715
margin_top = 201.525
margin_right = 564.715
margin_bottom = 241.525

[node name="IpAddr" type="LineEdit" parent="Control"]
margin_left = -123.866
margin_top = 30.1892
margin_right = 8.13394
margin_bottom = 54.1892
placeholder_text = "IP Address"

[node name="port" type="LineEdit" parent="Control"]
margin_left = 24.2432
margin_top = 27.0
margin_right = 217.243
margin_bottom = 51.0
align = 1
placeholder_text = "port"

[node name="CreateServer" type="Button" parent="Control"]
margin_left = 52.0
margin_top = 115.0
margin_right = 152.0
margin_bottom = 140.0
text = "Create Server"

[node name="JoinServer" type="Button" parent="Control"]
margin_left = 52.0
margin_top = 71.0
margin_right = 152.0
margin_bottom = 96.0
text = "Join Server"

[node name="StartGame" type="Button" parent="."]
margin_left = 742.715
margin_top = 215.525
margin_right = 857.715
margin_bottom = 260.525
text = "Start Game"

[node name="iplabel" type="Label" parent="."]
margin_left = 514.306
margin_top = 383.546
margin_right = 784.306
margin_bottom = 434.546
align = 1
valign = 1

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 524.715, 201.525 )
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( -327689, 0, 0, -262153, 0, 0, -196617, 0, 0, -131081, 0, 0, -65545, 0, 0, -9, 0, 0, 65527, 0, 0, 131063, 0, 0, 196599, 0, 0, 262135, 0, 0, 327671, 0, 0, 262152, 6, 0, 393207, 0, 0, 393208, 0, 0, 393209, 0, 0, 393210, 0, 0, 393211, 0, 0, 393212, 0, 0, 393213, 0, 0, 393214, 0, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0 )

[node name="OptionButton" type="OptionButton" parent="."]
margin_left = 308.187
margin_top = 117.32
margin_right = 436.187
margin_bottom = 161.32
custom_fonts/font = ExtResource( 3 )
text = "level1"
items = [ "level1", null, false, 0, null, "level2", null, false, 1, null, "level3", null, false, 2, null, "testlv", null, false, 3, null ]
selected = 0

[node name="Name" type="LineEdit" parent="."]
margin_left = 545.23
margin_top = 151.308
margin_right = 730.23
margin_bottom = 187.308
align = 1
placeholder_text = "Enter Your Name"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="menubt" type="Button" parent="CanvasLayer"]
margin_right = 95.0
margin_bottom = 33.0
text = "MENU"

[connection signal="text_changed" from="Control/IpAddr" to="." method="_on_IpAddr_text_changed"]
[connection signal="text_changed" from="Control/port" to="." method="_on_port_text_changed"]
[connection signal="pressed" from="Control/CreateServer" to="." method="_on_CreateServer_pressed"]
[connection signal="pressed" from="Control/JoinServer" to="." method="_on_JoinServer_pressed"]
[connection signal="pressed" from="StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="text_changed" from="Name" to="." method="_on_Name_text_changed"]
[connection signal="pressed" from="CanvasLayer/menubt" to="." method="_on_menubt_pressed"]
